# advent-of-code-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  NOTICE  README.md  add_day.py  conanfile.py
include/: formatters.hpp  registrar.hpp  runner.hpp  solver.hpp
src/: formatters.cpp  main.cpp  registrar.cpp  runner.cpp  solver.cpp
template/: day_00.cpp  day_00.hpp
